--- a/AppInsight/appsettings.json
+++ b/AppInsight/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ApplicationInsights": {
-    "ConnectionString": "InstrumentationKey=290dd773-518a-45b2-869b-0f5621745e2b;IngestionEndpoint=https://southindia-0.in.applicationinsights.azure.com/;LiveEndpoint=https://southindia.livediagnostics.monitor.azure.com/;ApplicationId=a31c220c-e657-4501-8e2c-921cb3649f5c"
+    "ConnectionString": "Put appinsight connection string here"
   },
   "AllowedHosts": "*"
 }
